--- a/WildSmoke/index.html
+++ b/WildSmoke/index.html
@@ -44,9 +44,7 @@
             <!-- <h2 class="subtitle is-3 publication-subtitle"></h2> -->
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://autumnyq.github.io/" , target="_blank">
-                  <span class="fancy_text_color">Yuqiu Liu</span> </a
-                >,
+                <a href="https://autumnyq.github.io/" , target="_blank"> <span class="fancy_text_color">Yuqiu Liu</span> </a>,
               </span>
 
               <span class="author-block">
@@ -56,9 +54,7 @@
               </span>
 
               <span class="author-block">
-                <a href="https://msavva.github.io/" , target="_blank">
-                  <span class="fancy_text_color">Manolis Savva</span> </a
-                >,
+                <a href="https://msavva.github.io/" , target="_blank"> <span class="fancy_text_color">Manolis Savva</span> </a>,
               </span>
 
               <span class="author-block">
