--- a/WildSmoke/index.html
+++ b/WildSmoke/index.html
@@ -236,7 +236,7 @@
                 complex and irregular boundaries while being intertwined with significant noise from both the environment and background. To address
                 this challenge, we propose a pipeline that automatically extracts clean smoke regions from a single in-the-wild video.
               </p>
-              <img src="./static/images/smoke_ext.PNG" style="max-width: 100%; height: auto" />
+              <img src="./static/images/smoke_ext.png" style="max-width: 100%; height: auto" />
               <p style="text-align: center; font-size: 14px">Smoke Extraction Process</p>
               <p>
                 2) Pose estimation and coarse initialization for 3D point cloud. To obtain camera intrinsics and extrinsic matrices for frames, we
