--- a/WildSmoke/index.html
+++ b/WildSmoke/index.html
@@ -148,7 +148,7 @@
 
     <section class="hero teaser">
       <div class="container is-max-desktop">
-        <div class="hero-body">
+        <div class="hero-body" style="max-width: 1200px">
           <div class="columns is-centered has-text-centered">
             <div class="column is-full">
               <img src="./static/images/pipeline.png" alt="pipeline" class="w-full h-auto object-cover transition-transform duration-700" />
