--- a/WildSmoke/index.html
+++ b/WildSmoke/index.html
@@ -92,7 +92,10 @@
                 </span>
                 <!-- Models Link. -->
                 <span class="link-block">
-                  <a href="https://huggingface.co/datasets/qiuqiu99/WildSmoke/tree/main" class="external-link button is-normal is-rounded is-dark">
+                  <a
+                    href="https://huggingface.co/datasets/delta-lab-ai/WildSmoke/tree/main"
+                    class="external-link button is-normal is-rounded is-dark"
+                  >
                     <span class="icon">
                       <i class="fa fa-network-wired"></i>
                     </span>
@@ -102,7 +105,7 @@
                 <!-- Data Link.-->
                 <span class="link-block">
                   <a
-                    href="https://huggingface.co/datasets/qiuqiu99/WildSmoke/tree/main"
+                    href="https://huggingface.co/datasets/delta-lab-ai/WildSmoke/tree/main"
                     class="external-link button is-normal is-rounded is-dark"
                     ,
                     target="_blank"
